--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=DocGenNG
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.enabled = true
+springdoc.swagger-ui.path = /swagger-ui.html
+springdoc.swagger-ui.tryItOutEnabled = false
+springdoc.swagger-ui.filter = false
+springdoc.swagger-ui.syntaxHighlight.activated = true
