change http client and change read properties from config

--- a/DocGenSvc/src/main/resources/application.properties
+++ b/DocGenSvc/src/main/resources/application.properties
@@ -5,3 +5,7 @@ springdoc.swagger-ui.path = /swagger-ui.html
 springdoc.swagger-ui.tryItOutEnabled = false
 springdoc.swagger-ui.filter = false
 springdoc.swagger-ui.syntaxHighlight.activated = true
+docgen.backend.quotex.uri=
+docgen.backend.quotex.url=http://localhost:8083/student/2
+docgen.backend.quotex.timeout= 5000
+
