--- a/DocGenSvc/src/main/resources/application.properties
+++ b/DocGenSvc/src/main/resources/application.properties
@@ -9,3 +9,13 @@ docgen.backend.quotex.uri=
 docgen.backend.quotex.url=http://localhost:8083/student/2
 docgen.backend.quotex.timeout= 5000
 
+#Connection and JPA Properties
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/DogGenNGDB
+spring.datasource.username=postgres
+spring.datasource.password=Mahi.ms07@
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
