--- a/DocGenLib/pom.xml
+++ b/DocGenLib/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <groupId>com.docGenSvc</groupId>
-    <artifactId>DocGenLib</artifactId>
+    <artifactId>DocGenNGLib</artifactId>
     <packaging>jar</packaging>
 
     <name>DocGenLib</name>
