--- a/DocGenSvc/pom.xml
+++ b/DocGenSvc/pom.xml
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>com.docGenSvc</groupId>
-            <artifactId>DocGenLib</artifactId>
+            <artifactId>DocGenNGLib</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
