copy resource file

--- a/DocGenLib/pom.xml
+++ b/DocGenLib/pom.xml
@@ -54,6 +54,12 @@
             <version>${apache.poi.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>${opencsv.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
