--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
 	</modules>
 	<properties>
 		<java.version>17</java.version>
-<!--		here dependencies version-->
 		<httpclient5.version>5.1.3</httpclient5.version>
 		<springdoc.openapi.version>2.1.0</springdoc.openapi.version>
 		<lombok.version>1.18.32</lombok.version>
-		<apache.poi.version>5.2.3</apache.poi.version>
+		<apache.poi.version>5.2.5</apache.poi.version>
+		<opencsv.version>5.9</opencsv.version>
 		<junit.version>3.8.1</junit.version>
 	</properties>
 	<dependencies>
