--- a/DocGenSvc/src/main/resources/application.properties
+++ b/DocGenSvc/src/main/resources/application.properties
@@ -11,3 +11,13 @@ docgen.backend.quotex.timeout= 5000
 docgen.backend.generation.wait=5000
 docgen.template=CPEA_TEMPLATE_v3.0.xlsx
 
+#Connection and JPA Properties
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/DogGenNGDB
+spring.datasource.username=postgres
+spring.datasource.password=Mahi.ms07@
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
